--- a/inference/2.gen_submit2.ipynb
+++ b/inference/2.gen_submit2.ipynb
@@ -82,23 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 384x640 5 motorbikes, 1 car, 1 truck, 17.3ms\n",
-      "Speed: 1.7ms preprocess, 17.3ms inference, 5.1ms postprocess per image at shape (1, 3, 384, 640)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2060/2060 [03:13<00:00, 10.66it/s]\n"
+      "  0%|          | 0/33 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'classifier' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 31\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# Phân loại ngày/đêm và dự đoán với mô hình tương ứng\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m img_path \u001b[38;5;129;01min\u001b[39;00m batch_files:\n\u001b[0;32m---> 31\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mclassifier\u001b[49m\u001b[38;5;241m.\u001b[39misDay(img_path):\n\u001b[1;32m     32\u001b[0m         \u001b[38;5;66;03m# print(img_path)\u001b[39;00m\n\u001b[1;32m     33\u001b[0m         \u001b[38;5;66;03m# print(\"day\")\u001b[39;00m\n\u001b[1;32m     34\u001b[0m         results\u001b[38;5;241m.\u001b[39mextend(model_day([img_path])) \u001b[38;5;66;03m# Dự đoán với model1 cho ban ngày\u001b[39;00m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     36\u001b[0m         \u001b[38;5;66;03m# print(img_path)\u001b[39;00m\n\u001b[1;32m     37\u001b[0m         \u001b[38;5;66;03m# print(\"night\")\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'classifier' is not defined"
      ]
     }
    ],
@@ -113,8 +115,8 @@
     "public_test = glob.glob(\"../data/raw/public test/*.jpg\")\n",
     "batch_size = 64  # Đặt số lượng ảnh trong mỗi batch, điều chỉnh sao cho phù hợp với RAM của bạn\n",
     "\n",
-    "model_day = YOLO('../models/base/day/day.pt', verbose=False)\n",
-    "model_night = YOLO('../models/base/night/night.pt', verbose=False)\n",
+    "model_day = YOLO('../models/base2/day/day.pt', verbose=False)\n",
+    "model_night = YOLO('../models/base2/night/night.pt', verbose=False)\n",
     "\n",
     "# Hàm chuyển đổi tọa độ từ xyxy sang xywh\n",
     "def xyxy_to_xywh(xyxy, img_width, img_height):\n",
